--- a/en/_posts/2021-02-04-now210204.md
+++ b/en/_posts/2021-02-04-now210204.md
@@ -13,21 +13,21 @@ The first month of 2021 is over, the virus is still there but we're hoping that 
 
 ## Working on [Nozbe][n]
 
-* I’m re-designing the way my team works - leading with context so that people get more autonomy!
-* I’m writing a script for a new Nozbe Teams webinar and online course
-* We’re celebrating [14 years of Nozbe](/nozbe14), soon with a promo and some other cool stuff.
+* Re-designing the way my team works - leading with context so that people get more autonomy!
+* Writing a script for a new Nozbe Teams webinar and online course
+* Celebrating [14 years of Nozbe](/nozbe14), soon with a promo and some other cool stuff.
 
 ## …and when I can, I'm also:
 
-* Completed my [annual review](/annual) and posted [my best blog posts of 2020](/2020best), my thorough [2020 annual review](/2020)
-* Redesigned my home screens for the [iPad](/ipadscreen) and the [iPhone](/iphonescreen)
-* Back to writing my [NoOffice book](/nooffice), already at 82% written!
+* Learning from last year - I posted [my best blog posts of 2020](/2020best) and a thorough [2020 annual review and summary](/2020)
+* Working more efficienly with redesigned home screens for the [iPad](/ipadscreen) and  [iPhone](/iphonescreen)
+* Back at writing [NoOffice book](/nooffice) - already at 82% written! I'm sharing my writing process on [Instagram](https://instagram.com/michaelsliwinski){:target='_blank'}
 
 ## …and privately
 
 * Started [Exodus 90](https://exodus90.com) with a few buddies of mine. More prayer, more reflection, more fitness, more fasting.
 * Reset the counter for sports. Making sure I stay fit and I’m on track for my 50km swim, 500km run and 2000km bike milestones.
-* Figuring out how to have an exciting family life when we’re basically confined in our home. One of these things was buildng a new Lego Porsche by myself (pictured above).
+* Figuring out how to have an exciting family life when we’re basically confined in our home. One of these things was buildng a new Lego Porsche (pictured above).
 
 {% include video.html id="bH6R6zbd-ZY" %}
 
