Podcasts added for Sat and Mon

--- a/en/_posts/2021-02-04-now210204.md
+++ b/en/_posts/2021-02-04-now210204.md
@@ -11,6 +11,8 @@ The first month of 2021 is over, the virus is still there but we're hoping that 
 
 ![{{ page.title }}](/img/{{ page.img }})
 
+> Note: this is my monthly ["now page"](/now) update where I share with you what I'm up to now.
+
 ## Working on [Nozbe][n]
 
 * Re-designing the way my team works - leading with context so that people get more autonomy!
