--- a/en/_posts/2021-02-20-magsafe.md
+++ b/en/_posts/2021-02-20-magsafe.md
@@ -5,7 +5,7 @@ cover: "magsafe.jpg"
 
 # Embracing the MagSafe lifestyle
 
-Apart from reducing the [size of the iPhone 12](/mini/) last year, Apple introduced a new way type of accessories for the iPhone, which have to do with charging and magnets - [MagSafe](https://www.apple.com/shop/accessories/all/magsafe). While I was a little skeptical about this, I [ordered the MagSafe Wallet](https://michael.team/iphonescreen/#bonus-2-new-iphone-mini-cases---mujjo-and-apple-magsafe-wallet) and gave it a try. Now I decided to go all in on MagSafe and embrace its magnetic lifestyle.
+Apart from reducing the [size of the iPhone 12](/mini/) last year, Apple introduced a new type of accessories for the iPhone, which have to do with charging and magnets - [MagSafe](https://www.apple.com/shop/accessories/all/magsafe). While I was a little skeptical about this, I [ordered the MagSafe Wallet](https://michael.team/iphonescreen/#bonus-2-new-iphone-mini-cases---mujjo-and-apple-magsafe-wallet) and gave it a try. After a while I decided to go all in on MagSafe and embrace this new magnetic lifestyle.
 
 <!--More-->
 
@@ -58,13 +58,11 @@ In the kitchen at home I have a small safe from Yale where I hold some spare cas
 
 ![{{ page.title }} 8](/img/magsafe-8.jpg)
 
-## MagSafe accessories are delightful but expensive!
+## MagSafe accessories are delightful but expensive…
 
-No, the MagSafe lifestyle is not cheap. All of these gadgets add up to $321. And it's not all. I'm planning to get two additional things: [Belkin BOOST↑CHARGE PRO 3-in-1 Wireless Charger with MagSafe](https://www.apple.com/shop/product/HPGA2ZM/A/belkin-boost↑charge-pro-3-in-1-wireless-charger-with-magsafe-white) ($139) for my [home office](/office) and a [MagSafe Power Bank](https://www.amazon.com/Mag-Safe-Ultra-Thin-Magnetic-Wireless-Powerbank/dp/B08QCZVL1P/?tag=sliwinski-20) (~$30). So in total I will have spent around $500 on MagSafe accessories.
+No, the MagSafe lifestyle is not cheap. All of these gadgets add up to $321. And I'm planning to get two additional items: [Belkin BOOST↑CHARGE PRO 3-in-1 Wireless Charger with MagSafe](https://www.apple.com/shop/product/HPGA2ZM/A/belkin-boost↑charge-pro-3-in-1-wireless-charger-with-magsafe-white) ($139) for my [home office](/office) and a [MagSafe Power Bank](https://www.amazon.com/Mag-Safe-Ultra-Thin-Magnetic-Wireless-Powerbank/dp/B08QCZVL1P/?tag=sliwinski-20) (~$30).
 
-That's a lot.
-
-However, I'm hoping to use these for years to come not just with this [iPhone Mini](/mini) but also with the future iPhones.
+In total I will have spent around $500 on MagSafe accessories. That's a lot. However, I'm hoping to use these for years to come not just with this [iPhone Mini](/mini) but also with the future iPhones.
 
 > Delight and convenience cost money. But it's money well spent if you can spare it. Such small things bring you joy every day. And joy is priceless.
 
