Yoda draft, Vlog Pricing, Porsche images

--- a/pl/_posts/2021-04-01-plecak.md
+++ b/pl/_posts/2021-04-01-plecak.md
@@ -1,6 +1,6 @@
 ---
 tags: [imagazine]
-cover: "plecak.jpg"
+cover: "backpack.jpg"
 ---
 
 # Co jest w moim plecaku na 2021 rok?
@@ -20,6 +20,8 @@ W grudniu pisałem o ciekawych pomysłach na gadżety dla geeka takiego jak ja (
 
 Wychodząc z domu, prawie zawsze biorę ze sobą podręczny plecak. Od prawie dwóch lat to ten sam Fjallraven Ulvö 23 w kolorze niebieskim. Ten mały plecaczek ma aż 23 litry pojemności jak się go porządnie wypcha. Gdy jest prawie pusty, wygląda bardzo niepozornie. Do tego ma bardzo wygodne paski z możliwością spięcia ich na wysokości klatki piersiowej. Do tego dwie kieszenie na butelki oraz specjalną komorę na laptopa (lub iPada w moim przypadku).
 
+![{{ page.title }} 2](/img/backpack-2.jpg)
+
 Plecak nie czeka na mnie pusty. Jest zawsze doposażony i gotowy do wyjścia. Oto co w nim jest:
 
 - w kieszeni tylnej: torebka z najpotrzebniejszymi gadżetami (więcej o niej poniżej);
@@ -32,6 +34,8 @@ Tak zapakowany plecak wisi w korytarzu. Wystarczy, że włożę do niego iPada i
 ## Torebka na akcesoria w plecaku
 
 Kluczem do sukcesu jest torebka na kabelki i gadżety, która jest zawsze spakowana w plecaku. Dzięki temu mogę spokojnie wyjść z domu, wiedząc, że mam pod ręką pełne wsparcie dla iPhone'a i iPada Pro.
+
+![{{ page.title }} 2](/img/backpack-4.jpg)
 
 Torebkę tę dostałem kiedyś od firmy Oppo i idealnie mi się sprawdza. Po otwarciu fajnie się rozwija i wszystkie rzeczy są łatwo dostępne:
 
@@ -53,7 +57,11 @@ W sumie dużo rzeczy, ale mieści się w tej podręcznej torebce, która nie opu
 
 ## Kiedy wyjeżdżam na dłużej, lub z rodziną, biorę dodatkowy zestaw kabelków
 
-Ostatnio nie za bardzo da się podróżować ze względu na pandemię, ale mimo wszystko staramy się wyjeżdżać rodzinnie na krótkie wypady weekendowe po okolicy. Ponieważ każda z moich trzech córek ma iPada, a najstarsza również Apple Watcha, tych sprzętów do ładowania robi się sporo. Zabieram wówczas dodatkowe opakowanie z następującymi gadżetami:
+Ostatnio nie za bardzo da się podróżować ze względu na pandemię, ale mimo wszystko staramy się wyjeżdżać rodzinnie na krótkie wypady weekendowe po okolicy. Ponieważ każda z moich trzech córek ma iPada, a najstarsza również Apple Watcha, tych sprzętów do ładowania robi się sporo.
+
+![{{ page.title }} 2](/img/backpack-6.jpg)
+
+Zabieram wówczas dodatkowe opakowanie z następującymi gadżetami:
 
 - ładowarka 100W GaN z dwoma portami USB-A i dwoma USB-C,
 - głośnik przenośny Bluetooth JBL,
