--- a/en/_posts/2021-03-09-podcast-211.md
+++ b/en/_posts/2021-03-09-podcast-211.md
@@ -23,7 +23,11 @@ I interview Radek to get an answer to one pressing question: why the heck would 
 *The Podcast is a semi-regular chat between [Radek][r] and yours truly (we both work at [Nozbe][n]) about [productivity](/productivity), [business](/business), [books](/books), and whatever else comes to mind... - if you liked this episode, make sure to [check out past episodes](/podcast).*
 
 ## Show notes for this episode:
-Michael interviews Radek to get an answer to one pressing question: why the heck would you move to a big city, if you could live anywhere?
+
+  * [The Podcast 91: Best city](/podcast-91)
+  * [The Podcast 196: Hands Are Dirty](/podcast-196)
+  * [The Podcast 206: Radek’s Face Shield Factory](/podcast-206)
+  * [Warsaw Hackerspace](https://hackerspace.pl/)
 
 
 [ov]: https://overcast.fm/itunes1012329770/the-podcast
