--- a/en/_posts/2015-06-25-podcast-1.md
+++ b/en/_posts/2015-06-25-podcast-1.md
@@ -6,7 +6,7 @@ img: "podcast-1.jpg"
 
 # The Podcast #1 - Introduction to Radek and me :-)
 
-Together with [Radek][r] (our VP of Apple Tachnologies at [Nozbe][n]) we decided to start a weekly podcast about "technology, productivity tips, business, publishing, and whatever else comes to mind." We've been chatting about these things for a while and a few weeks ago we decided to switch to English and start recording our chats. This is how "The Podcast" was born and I'd love to welcome you to listen our very [first episode:
+Together with [Radek][r] (our VP of Apple Tachnologies at [Nozbe][n]) we decided to start a weekly podcast about "technology, productivity tips, business, publishing, and whatever else comes to mind." We've been chatting about these things for a while and a few weeks ago we decided to switch to English and start recording our chats. This is how "The Podcast" was born and I'd love to welcome you to listen our very first episode:
 
 <!--More-->
 
