--- a/en/_posts/2021-03-11-japan.md
+++ b/en/_posts/2021-03-11-japan.md
@@ -24,17 +24,17 @@ Stunned by our popularity in Japan, I contacted Zono and thanked him for recomme
 
 I hired a PR agency, got a [Pimsleur Japanese course](https://www.audible.com/pd/Japanese-Phase-1-Unit-01-05-Audiobook/B0038VI90Q?qid=1615482119&sr=1-1&ref=a_search_c3_lProduct_1_1&pf_rd_p=83218cca-c308-412f-bfcf-90198b687a2f&pf_rd_r=JQN1F1ECRM0QEQPG8GRQ) to learn some basic Japanese and decided to go to Japan for the first time in my life to help him out with book promotion.
 
-![{{ page.title }} 2](/img/japan-2.jpg)
-
 ## March 8, 2011 - arrival in Japan
 
-I arrived completely jet-lagged. I was tired by excited! I met [Kiran from our PR agency](https://twitter.com/voodoovamp) and had my first day of sight-seeing.
+![{{ page.title }} 2](/img/japan-2.jpg)
 
-![{{ page.title }} 3](/img/japan-3.jpg)
+I arrived completely jet-lagged. I was tired by excited! I met [Kiran from our PR agency](https://twitter.com/voodoovamp) and had my first day of sight-seeing.
 
 ## March 9, 2011 - meeting Zono!
 
 Nozbe promotional activity starts. I got interviewed at [Mac Fan Magazine](https://book.mynavi.jp/macfan/) and later finally met my partner-in-crime, Zono! We've become friends online and finally could see each other for the first time in person!
+
+![{{ page.title }} 3](/img/japan-3.jpg)
 
 We went around bookstores in Tokyo to see "our" book in the book stores. After all, he was the author but my face as the CEO of Nozbe was on the cover!
 
@@ -52,7 +52,7 @@ I went down to the reception and asked about the event, but they said it was *no
 
 ![{{ page.title }} 5](/img/japan-5.jpg)
 
-I really enjoyed the press conference. It was great to meet all the major press tech people in Tokyo. And having **Zono** and [Etsuo Ohashi](https://twitter.com/shigotano) talk about my product was really great.
+I really enjoyed the press conference. It was great to meet all the major press tech people in Tokyo. And having **Zono** and [Etsuo Ohashi](https://twitter.com/shigotano) talk about my product was really fantastic.
 
 ## March 11, 2011 - the day of THE earthquake
 
@@ -66,7 +66,7 @@ We passed the famous Mount Fuji:
 
 ![{{ page.title }} 6](/img/japan-6.jpg)
 
-And soon after the train suddenly stopped.
+**And soon after the train suddenly stopped.**
 
 They announced that there was a major earthquake and that the train had to stop for security reasons. I thought: *"Big deal! They have earthquakes all the time!"* Little did I know. My friends told me to write an email to my wife to say that I was OK, but I resisted. It was just an earthquake, right? After a while I wrote the email and sent it.
 
@@ -74,11 +74,11 @@ Half an hour later the train started moving and we got to Osaka. We still didn't
 
 Lucky me, because Osaka is south of Tokyo, so I was moving away from the earthquake epicenter. If we had organized an event in Sendai (which we were considering) I'd be screwed.
 
-![{{ page.title }} 7](/img/japan-7.jpg)
-
 ## Event in Osaka's Apple Store
 
 Just before the planned event my wife called and was asking about my situation. I realized she must have gotten my email so I told her I was fine and ended the conversation to continue with the event.
+
+![{{ page.title }} 7](/img/japan-7.jpg)
 
 Our event that evening went without issues. We even went for a celebratory dinner afterwards. Only after we got back to our hotel rooms we realized what had happened.
 
@@ -173,7 +173,7 @@ I hope that everyone in Japan got back on their feet after the tragic earthquake
 - First time hosting a press conference
 - First book signing (even though Zono wrote it!)
 - First earthquake (and lots of next ones soon after!)
-- First time seeing a country dealing with a major catastrophe
+- First time witnessing a country dealing with a major catastrophe
 - First time on a bullet train
 - First time organizing an event at an Apple Store
 - First time eating Shabu-shabu
