--- a/en/_posts/2021-03-15-now210315.md
+++ b/en/_posts/2021-03-15-now210315.md
@@ -1,6 +1,6 @@
 ---
 tags: [now]
-img: "now210315.jpg"
+img: "backpack-2.jpg"
 ---
 
 # What's up as of March 15?
@@ -23,6 +23,7 @@ The Q1 of 2021 is almost done. I’m finishing off many things at once:
 
 * I’m finishing off [No Office book](https://NoOffice.org/) - I’m at 90%+ in English and the Polish and Spanish translations are at 80%+ as well!
 * I’ve migrated [The Podcast . FM](/podcast) to this site to simplify our podcasting setup
+* I'm fine-tuning [what's in my backpack](/backpack) and in my [home office](/office) and embracing [MagSafe lifestyle](/magsafe)
 * I’m working on this site more to simplify it. I might start blogging also at [Hey World](https://world.hey.com/michaels/)
 
 ## …and privately:
