fix last paragraph

--- a/en/_posts/2021-04-07-loveit.md
+++ b/en/_posts/2021-04-07-loveit.md
@@ -35,7 +35,7 @@ That's it. If in the usual circumstances he'd decide on not doing a thing, then 
 
 When things do change, you'll have to decide if you love it now.
 
-You have to love it, to do it.
+> To do it, you have to really love it!
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
