New 404 and nozbe.com

--- a/404.md
+++ b/404.md
@@ -5,18 +5,18 @@ lang: en
 
 # 404: Sorry! Wrong link...
 
-## 🌎 Search for on my global blog here:
+## 🌎 Choose a topic on my global blog:
 
 {% include tags.html %}
 
+## 🔍 Find a blog post or page
+
 {% include search.html %}
 
-<br>
-
-## Or browse the [archives from 2008 until now](/archive)
+## 🗂 Browse [the archives](/archive)
 
 Or go back [to the home page](/)
 
-## 🇵🇱 Zobacz może [moje artykuły i treści po Polsku](/pl/)
+## 🇵🇱 Zobacz [moje artykuły i treści po Polsku](/pl/)
 
 ## 🇪🇸 Mira mis [artículos en español](/es/)
