Posts for next week!

--- a/en/_posts/2021-05-21-forty2.md
+++ b/en/_posts/2021-05-21-forty2.md
@@ -11,7 +11,7 @@ Yesterday I turned 42. I’m well in my [forties](/forty) [now](/forty1). Hopefu
 
 ![{{ page.title }}](/img/{{ page.cover }})
 
-## New kind of a CEO
+## New kind of CEO
 
 Even though I'm 42 now, I still don't think I've grown up enough to be a CEO my company deserves. There's a lot to learn. A lot to embrace.
 
