No office apps book page

--- a/en/_posts/2018-12-20-szp.md
+++ b/en/_posts/2018-12-20-szp.md
@@ -29,7 +29,7 @@ I’ve been supporting them for quite a few years now and that’s why when they
 
 I actually gave a talk about 5 things that we usually say that “can’t be done”... but they really can... and should.
 
-[Click to watch my talk from their conference in January 2017 is available below (in Polish, sorry!)](/pl/szlachetna-paczka/)
+[Click to watch my talk from their conference in January 2017 (in Polish)](/pl/szlachetna-paczka/)
 
 [n]: https://michael.gratis/nozbe
 [p]: /podcast
