Update 2016 again with wrong tag

--- a/en/_posts/2016-06-14-guns.md
+++ b/en/_posts/2016-06-14-guns.md
@@ -1,5 +1,5 @@
 ---
-tags: [life]
+tags: [wrong]
 img: "guns.jpg"
 ---
 
@@ -13,23 +13,21 @@ Another day and [another mass shooting in the USA.](https://en.m.wikipedia.org/w
 
 ## Before we start, a story close to my heart - how my podcast co-host was assaulted two years ago in San Francisco.
 
-Two years ago my young iOS developer Radek (my current [The Podcast][tp] co-host) went to San Francisco for Apple's WWDC conference. One evening coming back from the conference he was assaulted with a gun by two people who stole his passport and his iPhone. This was his first ever trip to the USA and his first few days in the country. He was shocked and scared.
+Two years ago my young iOS developer Radek (my [The Podcast][tp] co-host) went to San Francisco for Apple's WWDC conference. One evening coming back from the conference he was assaulted with a gun by two people who stole his passport and his iPhone. This was his first ever trip to the USA and his first few days in the country. He was shocked and scared.
 
 Yes, people steal iPhones in Europe but they don't do it with a gun! Usually when your phone is stolen all you worry about is that you lost a valuable device. Radek was scared for his life!
 
 This is the main difference - where in the USA they pull a gun on you, in Europe they'll maybe slap or punch you in the face. Usually not even that. This is the reality of modern-day America:
 
-
-
 ## 1. The more guns America has, the more people die. It's obvious if you compare it with the rest of the world.
 
 Just look at the chart below where you see the USA compared to other countries. The correlation between gun ownership and gun-related deaths. America is totally off the charts and not in a good way:
 
-![Why America's gun ownership leads to so many mass shootings and innocent deaths. And how it can be stopped. 2](/img/guns-2.jpg)
+[USA and gun ownership](/img/guns-ownership.jpg)
 
 Just look how it turns out per US state - ***the more guns, the more killings.*** Coincidence?
 
-![Why America's gun ownership leads to so many mass shootings and innocent deaths. And how it can be stopped. 3](/img/guns-3.jpg)
+![USA and gun ownership states](/img/guns-ownership-states.jpg)
 
 When people get emotional they get crazy. And when they have a gun this is what happens:
 
@@ -37,7 +35,7 @@ When people get emotional they get crazy. And when they have a gun this is what 
 
 And if you think this was out of ordinary just look at this monthly newsletter from "Parents Against Gun Violence" where you can see why people kill people. When someone gets angry they reach for their gun because they can:
 
-![Why America's gun ownership leads to so many mass shootings and innocent deaths. And how it can be stopped. 4](/img/guns-4.jpg)
+![Parents against gun violence](/img/guns-parents.jpg)
 
 In Europe we don't have guns so when we get angry we yell at each other. People shouldn't be solving their anger issues and frustrations with guns. Which brings me to the next point:
 
@@ -47,13 +45,13 @@ In Canada there have been eight mass shootings in 20 years. In the UK there were
 
 And 998 since the Sandy Hook Elementary School shooting in December of 2012 - in the last 3.5 years - in which at least 1140 people have died and 3942 were wounded! That's more than 5000 people shot! Just think about the scale of this - it doesn't even compare to anything else in any other country in the world!
 
-![Why America's gun ownership leads to so many mass shootings and innocent deaths. And how it can be stopped. 5](/img/guns-5.jpg)
+![Gun Violence Archive of Mass Shootings](/img/guns-mass-shootings.jpg)
 
 ## 3. Mass shootings are NOT done by terrorists!
 
 Yes, in Europe we’ve had a few terrorist incidents like in Paris and Brussels and Spain... but these were organized terrorist attacks. In the USA people say it's the terrorists that shoot people but the facts state that it's simply not true - people kill people. US citizens kill other US citizens:
 
-![Why America's gun ownership leads to so many mass shootings and innocent deaths. And how it can be stopped. 6](/img/guns-6.jpg)
+![US shootings with muslims](/img/guns-muslims.jpg)
 
 Yes the person shooting in the Orlando club was of Afghan origins but he was a legal US citizen. He was actually a regular to the club. He was a bodyguard. He just bought a gun for himself legally and he used it against other US citizens.
 
@@ -75,7 +73,7 @@ Please, keep the Wild Wild West in the movies and move on, America, please under
 
 Just look at this magazine ad for an assault rifle. Apparently to be a real man you have to own an assault rifle:
 
-![Why America's gun ownership leads to so many mass shootings and innocent deaths. And how it can be stopped. 7](/img/guns-7.jpg)
+![Assault Rifle Ad](/img/guns-rifle.jpg)
 
 I guess this means there are no real men in Europe because nobody here owns an assault rifle. Just tell me how this kind of advertisement doesn't encourage violent behavior.
 
@@ -100,6 +98,10 @@ It's not like Europe is better than the USA. But in this regard it is. We have m
 ## [Here's the gallery of all the people who didn't have to die in Orlando](https://twitter.com/i/moments/742144187219464192)
 
 ## [Here's the latest performance by the late 22-year-old Christina Grimmie, who was shot by a crazy white person with a gun](https://youtube.com/watch?v=JCVRJ8Db-nM)
+
+## Still unconvinced? Listen to John Oliver talking on NRA:
+
+{% include video.html id="_ECYMvjU52E" %}
 
 ***Question:*** *When will this craziness stop? What will you do about it?*
 
