--- a/en/_posts/2016-06-20-emailban.md
+++ b/en/_posts/2016-06-20-emailban.md
@@ -1,5 +1,5 @@
 ---
-tags: [medium,nooffice]
+tags: [nooffice]
 img: "emailban.jpg"
 ---
 
@@ -11,15 +11,11 @@ There's a new book ["Under New Management" by David Burkus][david] coming soon t
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-*I originally posted this on [Medium][m] where I post about remote working as a part of [NoOffice publication][mo]. I'd appreciate if you [followed me there][mu] and recommended my posts, thanks!*
-
 ## If you manage your projects through email you are doing it wrong!
 
 Email is bad for you and your team because we get too many messages every day and the important internal emails get mixed up with other correspondence with people from the outside world.
 
 To solve this problem we designed a new way to communicate: we use email for the outside world and something else for "internal communication.” We use two apps for that: Slack and Nozbe. This is how we communicate: 
-
-
 
 ## Nozbe is to communicate through tasks
 
