--- a/en/_posts/2016-06-23-mobility.md
+++ b/en/_posts/2016-06-23-mobility.md
@@ -5,13 +5,13 @@ img: "mobility.jpg"
 
 # Why “mobile” is a value, “mobile” is important and “mobile” really comes first
 
-As a reader of this blog, you may know me as a somewhat eccentric guy – I don’t follow the beaten track. My main [computer for work is an iPad Pro][ipad] (which I’m using right now to write this text), my second computer is an [iPhone 6S Plus](https://sliwinski.com/6pluslove), and [my team of over 20 people][about] all works from home. [We don’t have a central office](https://sliwinski.com/teleworking). And we won’t have one. This is how I’ve been working on Nozbe for the last nine years.
+As a reader of this blog, you may know me as a somewhat eccentric guy – I don’t follow the beaten track. My main [computer for work is an iPad Pro][ipad] (which I’m using right now to write this text), my second computer is an [iPhone 6S Plus](https://sliwinski.com/6pluslove), and [my team of over 20 people][about] all works from home. [We don’t have a central office](https://sliwinski.com/teleworking). This is how I’ve been working on Nozbe for the last nine years.
 
 <!--More-->
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-*Note: The following article appeared first in the 6/2016 issue of [iMagazine][] - the leading lifestyle magazine for Apple enthusiasts in Poland. I'm a regular contributor and write my monthly productivity column there.*
+*Note: The following article appeared first in the 6/2016 issue of [iMagazine](/pl/mobilnie/) - the leading lifestyle magazine for Apple enthusiasts in Poland. I'm a regular contributor and write my monthly productivity column there.*
 
 Recently our company has been developing more and more rapidly and I’ve had to make more strategic decisions regarding the business itself, tools we use, and many other more or less important things.
 
@@ -20,8 +20,6 @@ Recently our company has been developing more and more rapidly and I’ve had to
 Nobody likes making mistakes. We prefer to be right. And now, with even more decisions, making bad choices is inevitable. Nobody is infallible. You just have to admit your mistake and fix it as soon as possible. There’s shame and wasted time. Not very productive, is it?
 
 Here's what happened:
-
-
 
 ## Recently we made a few mistakes. Why? Because we forgot about our values.
 
