--- a/en/_posts/2016-06-14-guns.md
+++ b/en/_posts/2016-06-14-guns.md
@@ -23,7 +23,7 @@ This is the main difference - where in the USA they pull a gun on you, in Europe
 
 Just look at the chart below where you see the USA compared to other countries. The correlation between gun ownership and gun-related deaths. America is totally off the charts and not in a good way:
 
-[USA and gun ownership](/img/guns-ownership.jpg)
+![USA and gun ownership](/img/guns-ownership.jpg)
 
 Just look how it turns out per US state - ***the more guns, the more killings.*** Coincidence?
 
@@ -95,11 +95,11 @@ Everyone is entitled to a different political opinion but if you're a gun owner 
 
 It's not like Europe is better than the USA. But in this regard it is. We have moved on from our violent past and regular people can't have guns here. We don't have gun shops. We don't have the NRA. We also don't have mass shootings... and when we do, it's an exception to the rule and not an everyday occurrence. Come visit Europe. This can be done. Life without guns is possible.
 
-## [Here's the gallery of all the people who didn't have to die in Orlando](https://twitter.com/i/moments/742144187219464192)
+### [Here's the gallery of all the people who didn't have to die in Orlando](https://twitter.com/i/moments/742144187219464192)
 
-## [Here's the latest performance by the late 22-year-old Christina Grimmie, who was shot by a crazy white person with a gun](https://youtube.com/watch?v=JCVRJ8Db-nM)
+### [Here's the latest performance by the late 22-year-old Christina Grimmie, who was shot by a crazy white person with a gun](https://youtube.com/watch?v=JCVRJ8Db-nM)
 
-## Still unconvinced? Listen to John Oliver talking on NRA:
+## Still unconvinced? Listen to John Oliver talking about this:
 
 {% include video.html id="_ECYMvjU52E" %}
 
