--- a/en/_posts/2016-02-05-news1602.md
+++ b/en/_posts/2016-02-05-news1602.md
@@ -5,7 +5,7 @@ img: "news1602.jpg"
 
 # Have you set up your New Year's goals yet? It's still not too late!
 
-*Note: This post is a transcript of my "Passionate Productivity" newsletter which I send to people who read my book "It's all about Passion!" - if you want to be receiving weekly emails from me in the future, [get the book by signing up](https://sliwinski.com/passion) - thank you!*
+*Note: This post is a transcript of my "Passionate Productivity" newsletter which I send to people who read my book "It's all about Passion!" - if you want to be receiving weekly emails from me in the future, [get the book by signing up](/newsletter/) - thank you!*
 
 Time flies! We're already in February of this New Year of 2016 and I've just celebrated [9 years of running Nozbe][s4]. And when people ask me what's next for me, I tell them: [I'm just getting started.][s5]
 
