--- a/en/_posts/2016-02-26-news-6.md
+++ b/en/_posts/2016-02-26-news-6.md
@@ -11,7 +11,7 @@ The month of February is ending, still 10 months of 2016 left to make it your be
 
 ![{{ page.title }}](/img/{{ page.img }})
 
-***Note:*** *This post is a transcript of my "Passionate Productivity" newsletter which I send to people who read my book "It's all about Passion!" - if you want to be receiving weekly emails from me in the future, [get the book by signing up](https://sliwinski.com/passion) - thank you!*
+***Note:*** *This post is a transcript of my "Passionate Productivity" newsletter which I send to people who read my book "It's all about Passion!" - if you want to be receiving weekly emails from me in the future, [get the book by signing up](/newsletter/) - thank you!*
 
 **To have a productive day…**
 
