Past guest appearances 2017 plus yes was

--- a/en/_posts/2016-08-01-where.md
+++ b/en/_posts/2016-08-01-where.md
@@ -19,22 +19,22 @@ Here's the list. I've started with the [most recent appearances](/guest) (**upda
 
 ## 2018
 
-* **(TV Appearance 🇵🇱)** [Breakfast TVP2 - How we work on Fridays at Nozbe](https://sliwinski.com/tvp2)
-* **(Speaking)** [MobiConf 2018](https://sliwinski.com/mobiconfvideo/)
-* **(Speaking)** [InfoShare 2018](https://sliwinski.com/infoshare/)
-* (Podcast) [iPad Only with Martinj Verheij](https://www.martijnverheij.nl/aflevering-8-ipadonly/)
-* (Podcast) [Stay on Top of Your Work](https://www.timecamp.com/blog/2018/07/michael-sliwinski-podcast/)
+* **(TV Appearance 🇵🇱)** [Breakfast TVP2 - How we work on Fridays at Nozbe](/tvp2/)
+* **(Speaking)** [MobiConf 2018](/mobiconfvideo/)
+* **(Speaking)** [InfoShare 2018](/infoshare/)
+* (Podcast) [iPad Only with Martinj Verheij](/verheij/)
+* (Podcast) [Stay on Top of Your Work](/timecamp/)
 * **(Speaking 🇵🇱)** [Żyj w Obfitości 2018](https://zyjwobfitosci.pl)
-* (Podcast 🇵🇱) [Tato Na Wyspach](https://tatonawyspach.co/2018/08/22/jak-nauczyc-dzieci-produktywnosci-michal-sliwinski/)
-* (Podcast 🇵🇱) [Startup My Way]( http://startupmyway.com/smw-podcast-012-michal-sliwinski-budowa-startupu-od-1-do-500-tys-uzytkownikow-czyli-jak-powstala-aplikacja-nozbe/)
-* (Podcast 🇵🇱) [Michał Szafrański - "Więcej niż oszczędzanie pieniędzy 120" - Mastermind](https://jakoszczedzacpieniadze.pl/mastermind-co-to-jest-i-jak-go-zrobic)
+* (Podcast 🇵🇱) [Tato Na Wyspach](/pl/tatonawyspach/)
+* (Podcast 🇵🇱) [Startup My Way](/pl/startupmyway/)
+* (Podcast 🇵🇱) [Michał Szafrański - "Więcej niż oszczędzanie pieniędzy 120" - Mastermind](/pl/mastermind/)
 
 ## 2017
 
-* (Podcast) [Happy Melly - The Secret to Productivity](https://www.happymelly.com/the-secret-to-productivity/)
-* (Podcast 🇵🇱) [Słownik Talentów - Achiever - Osiąganie](https://dominikjuszczyk.pl/2017/05/podcast-023-slownik-talentow-osiaganie-achiever/)
-* (Podcast 🇵🇱) [YesWas 163](https://yeswas.pl/ywp/163-czy-mamy-cos-przed-soba/)
-* **(Speaking 🇵🇱)** [Kongres Szlachetnej Paczki](https://sliwinski.com/szp/)
+* (Podcast) [Happy Melly - The Secret to Productivity](/happymelly/)
+* (Podcast 🇵🇱) [Słownik Talentów - Achiever - Osiąganie](/pl/dominikjuszczyk/)
+* (Podcast 🇵🇱) [YesWas 163](/pl/yeswas/)
+* **(Speaking 🇵🇱)** [Kongres Szlachetnej Paczki](/pl/szlachetna-paczka/)
 
 ## 2016 - In English
 
